--- a/Certification App/Src/Admin BU-Wise-Records.fx.yaml
+++ b/Certification App/Src/Admin BU-Wise-Records.fx.yaml
@@ -612,7 +612,7 @@
                                     "SUPER-ADMIN"
                                 ]) Or CountRows(
                                     Filter(
-                                        'BU-List',
+                                        BUList,
                                         'BU-Head'.Email = User().Email
                                     )
                                 ) = 1,
@@ -991,7 +991,7 @@
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -1036,7 +1036,7 @@
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -3457,7 +3457,7 @@
                         "SUPER-ADMIN"
                     ]) Or CountRows(
                         Filter(
-                            'BU-List',
+                            BUList,
                             'BU-Head'.Email = User().Email
                         )
                     ) = 1,
@@ -3816,7 +3816,7 @@
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -3857,7 +3857,7 @@
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
