--- a/Certification App/Src/CertificationRecommendationScreen.fx.yaml
+++ b/Certification App/Src/CertificationRecommendationScreen.fx.yaml
@@ -613,7 +613,7 @@ CertificationRecommendationScreen As screen:
                                     "SUPER-ADMIN"
                                 ]) Or CountRows(
                                     Filter(
-                                        'BU-List',
+                                        BUList,
                                         'BU-Head'.Email = User().Email
                                     )
                                 ) = 1,
@@ -1002,7 +1002,7 @@ CertificationRecommendationScreen As screen:
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -1048,7 +1048,7 @@ CertificationRecommendationScreen As screen:
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -2299,7 +2299,7 @@ CertificationRecommendationScreen As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -2340,7 +2340,7 @@ CertificationRecommendationScreen As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -2744,7 +2744,7 @@ CertificationRecommendationScreen As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
