--- a/Certification App/Src/Responsive Home Screen.fx.yaml
+++ b/Certification App/Src/Responsive Home Screen.fx.yaml
@@ -612,7 +612,7 @@
                                     "SUPER-ADMIN"
                                 ]) Or CountRows(
                                     Filter(
-                                        'BU-List',
+                                        BUList,
                                         'BU-Head'.Email = User().Email
                                     )
                                 ) = 1,
@@ -996,7 +996,7 @@
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -1040,7 +1040,7 @@
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -2247,7 +2247,7 @@
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -2288,7 +2288,7 @@
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -2694,7 +2694,7 @@
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
