--- a/Certification App/Src/Ask_Ques_Answers.fx.yaml
+++ b/Certification App/Src/Ask_Ques_Answers.fx.yaml
@@ -623,7 +623,7 @@ Ask_Ques_Answers As screen:
                                     "SUPER-ADMIN"
                                 ]) Or CountRows(
                                     Filter(
-                                        'BU-List',
+                                        BUList,
                                         'BU-Head'.Email = User().Email
                                     )
                                 ) = 1,
@@ -1000,7 +1000,7 @@ Ask_Ques_Answers As screen:
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -1046,7 +1046,7 @@ Ask_Ques_Answers As screen:
                                         "SUPER-ADMIN"
                                     ]) Or CountRows(
                                         Filter(
-                                            'BU-List',
+                                            BUList,
                                             'BU-Head'.Email = User().Email
                                         )
                                     ) = 1,
@@ -1925,7 +1925,7 @@ Ask_Ques_Answers As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -1966,7 +1966,7 @@ Ask_Ques_Answers As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
@@ -2370,7 +2370,7 @@ Ask_Ques_Answers As screen:
                             "SUPER-ADMIN"
                         ]) Or CountRows(
                             Filter(
-                                'BU-List',
+                                BUList,
                                 'BU-Head'.Email = User().Email
                             )
                         ) = 1,
