--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -74,7 +74,7 @@
       "pdffunction": false,
       "powerfxdecimal": false,
       "powerfxv1": false,
-      "projectionmapping": false,
+      "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
       "reservedkeywords": false,
