--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -45,7 +45,7 @@
       "enablerpawarecomponentdependency": true,
       "enablerulespanel": false,
       "enableruntimepolicies": false,
-      "enablesaveloadcleardataonweb": false,
+      "enablesaveloadcleardataonweb": true,
       "enableupdateifdelegation": false,
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
@@ -62,7 +62,7 @@
       "improvedmediacapture": false,
       "improvedtabstopbehavior": false,
       "isemptyrequirestableargument": true,
-      "keeprecentscreensloaded": false,
+      "keeprecentscreensloaded": true,
       "longlivingcache": false,
       "mobilenativerendering": false,
       "namedformulas": false,
@@ -86,7 +86,7 @@
       "tabledoesntwraprecords": true,
       "untypedobject": false,
       "usedisplaynamemetadata": true,
-      "useenforcesavedatalimits": false,
+      "useenforcesavedatalimits": true,
       "useexperimentalcdsconnector": true,
       "useexperimentalsqlconnector": false,
       "useguiddatatypes": false,
@@ -97,7 +97,7 @@
     "Author": "",
     "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
-    "DefaultConnectedDataSourceMaxGetRowsCount": 500,
+    "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
     "DocumentLayoutHeight": 768,
     "DocumentLayoutLockOrientation": true,
@@ -112,7 +112,7 @@
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Meeting+Agenda+App.msapp",
+    "Name": "Meeting Agenda App",
     "OriginatingVersion": "1.243",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
