--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -28,7 +28,7 @@
       "disablecdsfileandlargeimage": false,
       "dynamicschema": false,
       "enableappembeddingux": true,
-      "enablechatbotfeature": false,
+      "enablechatbotfeature": true,
       "enablecomponentnamemaps": true,
       "enablecomponentscopeoldbehavior": true,
       "enablecopilotcontrol": false,
@@ -108,11 +108,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "785549d1-f3cd-4684-a7a1-a571bc725ba5",
-    "Id": "4f16a06e-db95-4739-b391-254eac7b00ae",
+    "Id": "9a006f27-4842-463c-9bc8-9d56cd0f28d7",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Meeting Agenda App",
+    "Name": "Meeting+Agenda+App.msapp",
     "OriginatingVersion": "1.243",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
