--- a/Certification App/Src/EditorState/New Certifications request approval.editorstate.json
+++ b/Certification App/Src/EditorState/New Certifications request approval.editorstate.json
@@ -57099,7 +57099,14 @@
         "FontWeight",
         "Align",
         "VerticalAlign",
-        "X",
+        {
+          "AFDDataSourceName": "",
+          "AutoRuleBindingEnabled": false,
+          "AutoRuleBindingString": "",
+          "InvariantPropertyName": "X",
+          "IsLockable": false,
+          "NameMapSourceSchema": "?"
+        },
         "Y",
         "Width",
         "Height",
