--- a/Certification App/CanvasManifest.json
+++ b/Certification App/CanvasManifest.json
@@ -112,7 +112,7 @@
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Certification-Management-SP-3.msapp",
+    "Name": "Certification-Management-SP-3",
     "OriginatingVersion": "1.326",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
